2006-08-08  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/common/warp.c (diff_prepare_row): applied patch from
	Robert Ögren to fix a segfault on 64bit architectures (bug #327479).

2006-08-05  Raphaël Quinet  <raphael@gimp.org>

	Merged from HEAD branch:

	* app/core/gimpgradient-load.c (gimp_gradient_load): Do not crash
	when loading corrupt gradient files.  Ensure that error messages
	are correctly reported with g_set_error() instead of g_message().
	Fixes bug #349996.

2006-07-26  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontainertreeview.c
	(gimp_container_tree_view_button_press): added runtime version
	check and adjust the coords for RTL only for GTK+ < 2.7.0 because
	gtk_tree_view_get_path_at_pos() does the right thing by itself
	after this version. Fixes bug #348347.

2006-07-18  Michael Natterer  <mitch@gimp.org>

	Merged from HEAD branch:

	* app/widgets/gimpfiledialog.c (gimp_file_dialog_set_image):  use
	file_utils_uri_to_utf8_basename() instead of g_path_get_basename()
	to get an uri's basename. Fixes bug #347544.

2006-07-10  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.2.13, interface_age 13.

	Merged from HEAD branch:

        * app/xcf/xcf-load.c: use a signed variable when attempting to
        skip over unknown properties and check for EOF.  Fixes bug #345802.

	* app/xcf/xcf-read.c: cleanup, nothing really changed

2006-07-06  Sven Neumann  <sven@gimp.org>

	* Made 2.2.12 release.
	
2006-07-06  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/xcf/xcf-save.c (xcf_save_image_props): removed redundant
	call to xcf_save_prop() for PROP_PARASITES. Spotted by Henning
	Makholm (bug #346754).

2006-07-06  Sven Neumann  <sven@gimp.org>

	* app/xcf/xcf-load.c (xcf_load_vector): applied a patch from
	Henning Makholm that introduces a sanity check on the number of
	axes (bug #346742).

2006-06-22  Michael Natterer  <mitch@gimp.org>

	Merge from HEAD:
